Еще не все ответил

--- a/app/pages/answers.html
+++ b/app/pages/answers.html
@@ -7,7 +7,7 @@
 	</div>
 	<div class="pair">
 		<p class="question">2. Для чего используются и чем отличаются атрибуты async и defer?</p>
-		<p class="answer">мфмыввымвы</p>
+		<p class="answer">async загружает скрипт асинхронно, defer же откладывает выполнение до тех пор, пока страница не будет загружена полностью</p>
 	</div>
 	<div class="pair">
 		<p class="question">3. Почему предпочтительнее подключать скрипты перед <code>&lt;/body&gt;</code>, а не в <code>&lt;head&gt;</code>...<code>&lt;/head&gt;</code>?</p>
@@ -15,7 +15,8 @@
 	</div>
 	<div class="pair">
 		<p class="question">4. Какие основные отличия интерпретируемого языка программирования от компилируемого?</p>
-		<p class="answer">ывмвыфвы</p>
+		<p class="answer">Компилируемые языки преобразуются в машинный код компилятором, и являются платформо-зависимыми. Они являются инструкцией для машины, и не понятны для человека после компиляцыи. <br> 
+		Интерпритируемые - выполняются построчно программой-интерпритатором. Считаеться, что скорость выполнения компилируемого языка выше.</p>
 	</div>
 	<div class="pair">
 		<p class="question">5. Что такое языки высокого и низкого уровня? Какие ты знаешь?</p>
@@ -27,11 +28,11 @@
 	</div>
 	<div class="pair">
 		<p class="question">7. Может ли имя переменной начинаться с цифры, символов <code>_</code> или <code>$</code>?</p>
-		<p class="answer">мыывмым</p>
+		<p class="answer">Первый символ не может быть цыфрой, однако символы <code>_</code> и <code>$</code> могут быть как в начале имени переменной, так и сами являтся пременной. </p>
 	</div>
 	<div class="pair">
 		<p class="question">8. Какие слова <b>запрещено</b> использовать в названии переменной?</p>
-		<p class="answer">мыывмым</p>
+		<p class="answer">Запрещено использовать такие слова как: var, class, return,export...</p>
 	</div>
 	<div class="pair">
 		<p class="question">9. Что такое camelCase и snake_case?</p>
@@ -39,7 +40,7 @@
 	</div>
 	<div class="pair">
 		<p class="question">10. Что такое "типы данных"? Какой оператор позволяет определить тип данных?</p>
-		<p class="answer">мыывмым</p>
+		<p class="answer">Тип данных можно определить с помощью оператора typeof</p>
 	</div>
 	<div class="pair">
 		<p class="question">11. Что такое "динамическое приведение типов данных"? Можно ли писать JavaScript со статическим приведением типов?</p>
