Перекидываю 2 домашку на ноут

--- a/app/pages/answers.html
+++ b/app/pages/answers.html
@@ -1,4 +1,11 @@
-<!-- Все пары вопрос - ответ будут в div.faq -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	<!-- Все пары вопрос - ответ будут в div.faq -->
 <div class="faq">
 	<!-- Каждый ответ на вопрос будет в div.pair -->
 	<div class="pair">
@@ -71,4 +78,60 @@
 		можно вставлять выражения с помощью знака ${...}.
 		</p>
 	</div>
+	</div>
+
+<div class="pair loops">
+	<p class="question">1. Что такое "алгоритм"? Какие ты знаешь типы алгоритмов?</p>
+	<p class="answer">Алгоритм это описание определенного порядка действий, для достижения результата. Алгоритмы бывают: линейными, циклическими, ветвящимся. Это три основных вида.</p>
 </div>
+<div class="pair loops">
+	<p class="question">2. Зачем нужны циклы? Какие виды циклов ты знаешь? В чем их основные отличия?</p>
+	<p class="answer">Цыклы нужны для многократного пофторения каких-либо инструкций или действий. Существует 4 вида цыклов:
+	<pre> 
+		цикл for: 
+				for (начало; условие; шаг) {
+		 		 // ... тело цикла ...
+				}; Условие проверяеться на каждой операции перед выполнением тела цикла, затем выполняеться инкремент(декремент)
+		while:
+				while (условие) {
+		 		 // код, тело цикла
+				}; Выражение проверяеться на истинность на каждой итерации, продолжаеться пока условие будет верно.
+		do while:
+				do {
+		 		 // тело цикла
+				} while (условие); Условие проверяется после тела цикла.
+		 и цикл for in:
+				for (variable in object) {...
+				}
+			</pre>
+	 </p>
+</div>
+<div class="pair loops">
+	<p class="question">3. Что деляют операторы ++i и i++ и в чем их отличие?</p>
+	<p class="answer">Это небо.</p>
+</div>
+<div class="pair loops">
+	<p class="question">4. Что такое "итерация"?</p>
+	<p class="answer">Итерацией называеться каждое выполнение тела цикла</p>
+</div>
+<div class="pair loops">
+	<p class="question">5. Как называются и чем отличаются операторы || и <code>&amp;&amp;</code>?</p>
+	<p class="answer">Это небо.</p>
+</div>
+<div class="pair loops">
+	<p class="question">6. Что такое "алгоритм"? Какие ты знаешь типы алгоритмов?</p>
+	<p class="answer">Это небо.</p>
+</div>
+<div class="pair loops">
+	<p class="question">7. Для чего используется break? Почему в конструкции switch нужно использовать break для каждого case?
+	</p>
+	<p class="answer">Это небо.</p>
+</div><div class="pair loops">
+	<p class="question">8. Какие ты знаешь операторы сокращенной арифметики?</p>
+	<p class="answer">Это небо.</p>
+</div>
+<div class="pair loops">
+	<p class="question">9. Почему при выполнении указанного кода возникают ошибки?</p>
+	<p class="answer">Это небо.</p>
+</body>
+</html>
