--- a/app/pages/answers.html
+++ b/app/pages/answers.html
@@ -87,51 +87,52 @@
 <div class="pair loops">
 	<p class="question">2. Зачем нужны циклы? Какие виды циклов ты знаешь? В чем их основные отличия?</p>
 	<p class="answer">Цыклы нужны для многократного пофторения каких-либо инструкций или действий. Существует 4 вида цыклов:
-	<pre> 
-		цикл for: 
-				for (начало; условие; шаг) {
-		 		 // ... тело цикла ...
-				}; Условие проверяеться на каждой операции перед выполнением тела цикла, затем выполняеться инкремент(декремент)
-		while:
-				while (условие) {
-		 		 // код, тело цикла
-				}; Выражение проверяеться на истинность на каждой итерации, продолжаеться пока условие будет верно.
-		do while:
-				do {
-		 		 // тело цикла
-				} while (условие); Условие проверяется после тела цикла.
-		 и цикл for in:
-				for (variable in object) {...
-				}
-			</pre>
+		<pre> 
+			цикл for: 
+					for (начало; условие; шаг) {
+			 		 // ... тело цикла ...
+					}; Условие проверяеться на каждой операции перед выполнением тела цикла, затем выполняеться инкремент(декремент)
+			while:
+					while (условие) {
+			 		 // код, тело цикла
+					}; Выражение проверяеться на истинность на каждой итерации, продолжаеться пока условие будет верно.
+			do while:
+					do {
+			 		 // тело цикла
+					} while (условие); Условие проверяется после тела цикла.
+			 и цикл for in:
+					for (variable in object) {...
+					}
+		</pre>
 	 </p>
 </div>
 <div class="pair loops">
 	<p class="question">3. Что деляют операторы ++i и i++ и в чем их отличие?</p>
-	<p class="answer">Это небо.</p>
+	<p class="answer">Данный оператор увеличивает значение переменной на 1. Отличие состоит в том, что при записи ++i (префиксная форма)/, значение переменной сначала увеличивается на 1, затем выполняеться условие цикла. При записи i++ (постфиксная форма) переменная увеличиваеться, но возвращаеться результат до увеличения переменной. </p>
 </div>
 <div class="pair loops">
 	<p class="question">4. Что такое "итерация"?</p>
-	<p class="answer">Итерацией называеться каждое выполнение тела цикла</p>
+	<p class="answer">Итерацией называеться каждое выполнение тела цикла.</p>
 </div>
 <div class="pair loops">
 	<p class="question">5. Как называются и чем отличаются операторы || и <code>&amp;&amp;</code>?</p>
-	<p class="answer">Это небо.</p>
-</div>
-<div class="pair loops">
-	<p class="question">6. Что такое "алгоритм"? Какие ты знаешь типы алгоритмов?</p>
-	<p class="answer">Это небо.</p>
+	<p class="answer">Это логические операторы "ИЛИ", "И". Оператор || (ИЛИ), работает так: если хотябы один из значений истинна (true), он возвращает true. Если идет вычисление(несколько ИЛИ), оно останавливаеться как только будет true, и возвращает это значение, если все false, возвращает последнее. Оператор <code>&amp;&amp;</code> возвращает "правду" только в том случае, если оба аргумента "правда". В вычислениях как долько дойдет до "false", останавливаеться и возвращает это значение. Приоритет <code>&amp;&amp;</code> > || .</p>
 </div>
 <div class="pair loops">
 	<p class="question">7. Для чего используется break? Почему в конструкции switch нужно использовать break для каждого case?
 	</p>
-	<p class="answer">Это небо.</p>
+	<p class="answer">Используется для прерываня текущего цикла. break Используеться для того, чтобы отсановить выполнение цикла как только имя переменной совпадет с одним из значений case. Инструкции ниже выполнятся не будут</p>
 </div><div class="pair loops">
 	<p class="question">8. Какие ты знаешь операторы сокращенной арифметики?</p>
-	<p class="answer">Это небо.</p>
+	<p class="answer">Оператор сокращенной арифметики прибавление"x += y"; умножения "х *= у"; деление "х /= у"; отнимание "х -= у", а так же поиска остатка "%" и бинарных операторов работает по такому же прицыпу "х оператор= у".</p>
 </div>
 <div class="pair loops">
 	<p class="question">9. Почему при выполнении указанного кода возникают ошибки?</p>
-	<p class="answer">Это небо.</p>
+	<p class="answer">
+		(1) Это бесконечный цикл, нет инкремента и цифр от 0 до 10 бесконечное множество. <br>
+		(2) Из за точки с запятой один раз увеличивается переменная.<br>
+		(3) Нет прерывателя <code>break</code>, все нижележащие совпадающего с переменной условия тоже выполнятся.<br>
+		(4) Нет оператора "+" преобразовывающего тип данных.<br>
+	</p>
 </body>
 </html>
