--- a/app/pages/answers.html
+++ b/app/pages/answers.html
@@ -6,7 +6,39 @@
 </head>
 <body>
 	<div class="faq">
-		
+		<div class="pair arrays">
+			<p class="question">1. Что такое массив?</p>
+			<p class="answer">Это небо.</p>
+		</div>
+		<div class="pair arrays">
+			<p class="question">2. Чем массив отличается от объекта?</p>
+			<p class="answer">Это небо.</p>
+		</div>
+		<div class="pair arrays">
+			<p class="question">3. Что такое callback?</p>
+			<p class="answer">Это небо.</p>
+		</div>
+		<div class="pair arrays">
+			<p class="question">4. Чем отличаются методы Array.of и Array.from?</p>
+			<p class="answer">Это небо.</p>
+		</div>
+		<div class="pair arrays">
+			<p class="question">5. Как можно узнать длину массива?</p>
+			<p class="answer">Это небо.</p>
+		</div>
+		<div class="pair arrays">
+			<p class="question">6. Почему методы pop/push быстрее, чем shift/unshift?</p>
+			<p class="answer">Это небо.</p>
+		</div>
+		<div class="pair arrays">
+			<p class="question"> Дополни следующий код. 1) Как обратиться к свойству name? 2) Как задать свойство age равное 41?</p>
+			<p class="answer">
+				(1) Что такое осень...<br>
+				(2) Это небо...<br>
+				...
+			</p>
+		</div>
+
 	</div>
 </body>
 </html>
