--- a/app/pages/answers.html
+++ b/app/pages/answers.html
@@ -8,11 +8,11 @@
 	<div class="faq">
 		<div class="pair arrays">
 			<p class="question">1. Что такое массив?</p>
-			<p class="answer">Это небо.</p>
+			<p class="answer"> Набор элементов, расположенных по порядку, имеющих свой порядковый номер - индекс. Имет дополнительный методы массивов.</p>
 		</div>
 		<div class="pair arrays">
 			<p class="question">2. Чем массив отличается от объекта?</p>
-			<p class="answer">Это небо.</p>
+			<p class="answer">Для обращения к элементу массива используют индекс, который в свою очередь хранится в массиве в виде строки. Однако индексами могут быть только неотрицательные целые числа. При добавлении к массиву элемента с индексом, большим чем длинна массива, автоматически обновляется свойство length. Кроме того массивы имеют дополнительные методы массивов.</p>
 		</div>
 		<div class="pair arrays">
 			<p class="question">3. Что такое callback?</p>
@@ -24,11 +24,11 @@
 		</div>
 		<div class="pair arrays">
 			<p class="question">5. Как можно узнать длину массива?</p>
-			<p class="answer">Это небо.</p>
+			<p class="answer">У массивов есть свойство length, с помощью которого можно узнать количество элементов в массиве. Для вычисления длинны массива к индексу последнго элемента прибавляется 1. </p>
 		</div>
 		<div class="pair arrays">
 			<p class="question">6. Почему методы pop/push быстрее, чем shift/unshift?</p>
-			<p class="answer">Это небо.</p>
+			<p class="answer">При использовании методов shift/unshift происходит не только удаление (добавление) элемента с индексом 0, остальные элементы перемещаются на новые индексы. </p>
 		</div>
 		<div class="pair arrays">
 			<p class="question"> Дополни следующий код. 1) Как обратиться к свойству name? 2) Как задать свойство age равное 41?</p>
