--- a/app/pages/answers.html
+++ b/app/pages/answers.html
@@ -16,11 +16,13 @@
 		</div>
 		<div class="pair arrays">
 			<p class="question">3. Что такое callback?</p>
-			<p class="answer">Это небо.</p>
+			<p class="answer">Любая функция, которая передается другой функции в качестве аргумента, и выполняется только после того, как основная функция завершила выполнение.</p>
 		</div>
 		<div class="pair arrays">
 			<p class="question">4. Чем отличаются методы Array.of и Array.from?</p>
-			<p class="answer">Это небо.</p>
+			<p class="answer">Array.from - извлекает из массивоподобного элемента или итерируемого объекта данные и записывает их в новый экземпляр Array
+				Array.from - Создает новый массив Array, в который принимает нограниченное число элементов, вне зависимости от типа данных.
+			</p>
 		</div>
 		<div class="pair arrays">
 			<p class="question">5. Как можно узнать длину массива?</p>
