--- a/app/pages/answers.html
+++ b/app/pages/answers.html
@@ -32,7 +32,7 @@
 		</div>
 		<div class="pair objects">
 			<p class="question">7. Как можно обратиться к свойству с именем my-SoMe-PROPERTY+name?</p>
-			<p class="answer">Это небо.</p>
+			<p class="answer">Сделать его массивом, поставить кавычки для преобразования в строку</p>
 		</div>
 		<div class="pair objects">
 			<p class="question">8. Объясни, что такое деструктуризация.</p>
