Только ответы на вопросы

--- a/app/pages/answers.html
+++ b/app/pages/answers.html
@@ -35,8 +35,8 @@
 		<div class="pair arrays">
 			<p class="question"> Дополни следующий код. 1) Как обратиться к свойству name? 2) Как задать свойство age равное 41?</p>
 			<p class="answer">
-				(1) Что такое осень...<br>
-				(2) Это небо...<br>
+				(1) user[0].name; <br>
+				(2) user[0].age = 41. <br>
 				...
 			</p>
 		</div>
