--- a/app/pages/answers.html
+++ b/app/pages/answers.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<!-- Все пары вопрос - ответ будут в div.faq -->
@@ -10,8 +11,8 @@
 	<!-- Каждый ответ на вопрос будет в div.pair -->
   
 	<div class="pair">
-		<p class="question">1. Что такое EcmaScript?</p>
-		<p class="answer">EcmaScript это своего рода спецификация для скриптового языка, которая содержит правила, рекомендации для того, чтоб язык считался совмесным с EcmaScript, при условии соблюдения этих правил и рекомендаций.Ecma 262 являеться стандартом и спецификацией для EcmaScript</p>
+		<div class="question question">1. Что такое EcmaScript?</div>
+		<div class="answer">EcmaScript это своего рода спецификация для скриптового языка, которая содержит правила, рекомендации для того, чтоб язык считался совмесным с EcmaScript, при условии соблюдения этих правил и рекомендаций.Ecma 262 являеться стандартом и спецификацией для EcmaScript</div>
 	</div>
 	<div class="pair">
 		<p class="question">2. Для чего используются и чем отличаются атрибуты async и defer?</p>
@@ -50,18 +51,14 @@
 	</div>
 	<div class="pair">
 		<p class="question">10. Что такое "типы данных"? Какой оператор позволяет определить тип данных?</p>
-		<p class="answer">Тип данных:<ol>
-			<li>Число `number`</li>
-			<li>Строка `string`</li>
-			<li>Булевый тип (логический) `boolean`</li>
-			<li>Специальное значение `null`</li>
-			<li>Специальное значение `undefined`</li>
-			<li>Объекты `object`</li>
-		</ol>
-		Тип данных можно определить с помощью оператора typeof. Он возвращает тип переменной в виде строки.</p>
+		<div class="answer">Тип данных:
+			<p><li>Число `number`</li><li>Строка `string`</li><li>Булевый тип (логический) `boolean`</li><li>Специальное значение `null`</li><li>Специальное значение `undefined`</li><li>Объекты `object`</li></p>
+		Тип данных можно определить с помощью оператора typeof. Он возвращает тип переменной в виде строки.
+	</div>
 	</div>
 	<div class="pair">
-		<p class="question">11. Что такое "динамическое приведение типов данных"? Можно ли писать JavaScript со статическим приведением типов?</p>
+		<p class="question">11. Что такое "динамическое приведение типов данных"? Можно ли писать JavaScript со статическим приведением типов?
+		</p>
 		<p class="answer">При динамическом приведении в одну и ту же пременную есть возможность записать значения разных типов, тип переменной будет менятся. JavaScript будет возвращать значение для любого выражения.</p>
 	</div>
 	<div class="pair">
@@ -79,7 +76,6 @@
 		можно вставлять выражения с помощью знака ${...}.
 		</p>
 	</div>
-	</div>
 
 <div class="pair loops">
 	<p class="question">1. Что такое "алгоритм"? Какие ты знаешь типы алгоритмов?</p>
@@ -88,7 +84,7 @@
 <div class="pair loops">
 	<p class="question">2. Зачем нужны циклы? Какие виды циклов ты знаешь? В чем их основные отличия?</p>
 	<p class="answer">Цыклы нужны для многократного пофторения каких-либо инструкций или действий. Существует 4 вида цыклов:
-		<pre> 
+		
 			цикл for: 
 					for (начало; условие; шаг) {
 			 		 // ... тело цикла ...
@@ -104,7 +100,7 @@
 			 и цикл for in:
 					for (variable in object) {...
 					}
-		</pre>
+		
 	 </p>
 </div>
 <div class="pair loops">
@@ -123,7 +119,8 @@
 	<p class="question">7. Для чего используется break? Почему в конструкции switch нужно использовать break для каждого case?
 	</p>
 	<p class="answer">Используется для прерываня текущего цикла. break Используеться для того, чтобы отсановить выполнение цикла как только имя переменной совпадет с одним из значений case. Инструкции ниже выполнятся не будут</p>
-</div><div class="pair loops">
+</div>
+<div class="pair loops">
 	<p class="question">8. Какие ты знаешь операторы сокращенной арифметики?</p>
 	<p class="answer">Оператор сокращенной арифметики прибавление"x += y"; умножения "х *= у"; деление "х /= у"; отнимание "х -= у", а так же поиска остатка "%" и бинарных операторов работает по такому же прицыпу "х оператор= у".</p>
 </div>
@@ -135,6 +132,7 @@
 		(3) Нет прерывателя <code>break</code>, все нижележащие совпадающего с переменной условия тоже выполнятся.<br>
 		(4) Нет оператора "+" преобразовывающего тип данных.<br>
 	</p>
+</div>
 	<div class="pair functions">
 		<p class="question">1. Зачем нужны функции?</p>
 		<p class="answer">Функции нужны для удобства произведения каких-либо действий с одними и теми же параметрами в любой части программы.</p>
@@ -253,6 +251,67 @@
 			</p>
 		</div>
 
+	<div class="pair dom">
+		<p class="question">1. Что такое DOM?</p>
+		<p class="answer">Document object model - это интерфнейс , при помощи которого можно управлять содержимым HTML документа с помощью java script</p>
 	</div>
+	<div class="pair dom">
+		<p class="question">2. Что такое узел (нода)? Какие существуют ноды?</p>
+		<p class="answer">	Ноды - отдельные элементы в HTML  документе, представляемые в виде отдельных элементов  объектов.</p>
+	</div>
+	<div class="pair dom">
+		<p class="question">3. Какие есть способы поиска элементов на странице?</p>
+		<p class="answer">Существует два следующих способа поиска элементов: get.elementBy и querySelector</p>
+	</div>
+	<div class="pair dom">
+		<p class="question">4.Что возвращает метод document.getElementById()? А метод document.querySelectorAll()?</p>
+		<p class="answer">Метод  document.getElementById() возвращает ссылку на элемент, имеющий  индивидуальный id, метод  document.querySelectorAll() Возвращает коллекцию элементов</p>
+	</div>
+	<div class="pair dom">
+		<p class="question">5. Как изменить стили элемента? Какая существует особенность с правилам, в названии которых есть дефис (border-radius, padding-left)?</p>
+		<p class="answer">Стиль элемента изменяется свойством element.style. Для правильной записи свойств с префиксами используется запись MozBorderRadius, вместо -moz-border-radius, либо так  [‘-moz-border-radius’]</p>
+	</div>
+	<div class="pair dom">
+		<p class="question">6. Чем отличается коллекция от массива?</p>
+		<p class="answer">Коллекции от массива отличается тем, что у коллекции элементов отсутствуют методы массивов, но коллекции имеют свои собственные методы.</p>
+	</div>
+	<div class="pair dom">
+		<p class="question">7. Как обратиться к родителю элемента? А к потомку?</p>
+		<p class="answer">Для обращение к родителю элемента используется свойство  element.parentNode; к потомку -  element.childNode, или children.</p>
+	</div>
+	<div class="pair dom">
+		<p class="question">8. Опиши, какие методы используются для работы с классами? Что они делают?</p>
+		<p class="answer">При работе с классами можно вывести их в виде строки (className), либо в виде обьекта (сlassList), который имеет следующие методы:
+elem.classList.contains("class")- проверяет, есть ли такой класс у элмента, и возхвращает true если есть, false - если нет.
+elem.classList.add/remove("class")- добавляет к элементу/удаляет у элемента указанные классы
+elem.classList.toggle("class") проверяет, есть ли указанный класс в элементе, если есть - добавляет, если есть - удаляет.</p>
+	</div>
+	<div class="pair dom">
+		<p class="question">9. Что находится в свойстве Element.innerHTML?</p>
+		<p class="answer">В свойстве innerHTML находиться полученное содержимое HTML страницы, а в свойстве Element.innerHTML будет находиться содержимое элемента в виде строки.</p>
+	</div>
+	<div class="pair dom">
+		<p class="question">10. Как работает метод Element.matches()?</p>
+		<p class="answer">Данный метод проверяет соотвестсвие  элемента (как объекта),  переданному в параметры css селектору, и возвращает true  или false.</p>
+	</div>
+	<div class="pair dom">
+		<p class="question">11. Зачем нужна библиотека Modernizr?</p>
+		<p class="answer">Эта библиотека представляет набор быстрых тестов для браузера пользователя, на предмет того, может ли данная версия браузера поддерживать современные технологии, в противном случае разработчик может адаптировать код для более старых версий.</p>
+	</div>
+	<div class="pair dom">
+		<p class="question">11. Какие методы создают новый элемент, текстовую ноду?</p>
+		<p class="answer">Метод document.createElement() создает новый элемент в DOM. Метод для создания текстовой ноды: document.createTextNode().</p>
+	</div>
+	<div class="pair dom">
+		<p class="question">12. Чем отличаются Node.appendChild(), Node.insertBefore() и Element.insertAdjacentHTML()?</p>
+		<p class="answer">Node.appendChild() добавляет ноду в конец списка дочерних элементов родительской ноды; Node.insertBefore() добавляет элемент в список дочерних,но перед указанным в параметрах метода элементом; Element.insertAdjacentHTML() вставляет элемент конкретно указанную в параметрах, позицию.</p>
+	</div>
+	<div class="pair dom">
+		<p class="question">13. Какие два метода используются для удаления элементов?</p>
+		<p class="answer">Первый метод удаляет дочерний элемент из списка элементов родительской ноды: parentElem.removeChild(el);
+ второй – parentElem.removeChild(), принимает два параметра (newElem, elem) удаляет элемент «elem» заменяя его на новый «newElem».</p>
+	</div>
+	</div>
+	<script src="common.js"></script>
 </body>
 </html>
