--- a/app/pages/answers.html
+++ b/app/pages/answers.html
@@ -33,8 +33,9 @@
 	</div>
 	<div class="pair">
 		<p class="question">6. Для чего используются переменные? Какие ключевые слова используются для создания переменных? Какие есть отличия в переопределении значений при задании переменной через <code>let</code>, <code>const</code> и <code>var</code>?</p>
-		<p class="answer">Переменные используються для записи информации в выделенной области памяти, и последующем доступе к этой информации с помощбю имени переменной.<br> Для создания переменных используються ключевые слова: bolean, break, long, class, export, import, и др. Они не могут быть именем переменной.<br>
-		Переменная, обьявленная через let видна только в рамках обьявленного блока{....}, и только после того, как будет обьявленна; через var - видна везде в функции; const - задает переменную, которую нелзя менять - константу.</p>
+		<p class="answer">Переменные используються для записи информации в выделенной области памяти, и последующем доступе к этой информации с помощью имени переменной.<br> 
+			Для создания переменных используються ключевые слова: var, let и const. Они не могут быть именем переменной.<br>
+			Переменная, обьявленная через let видна только в рамках обьявленного блока{....}, ее нельзя переобьявлять в том же блоке, но можно за его пределами; через var - глобальны, и могут быть переобьявленны в любое время.; const - не может быть изменено, переназначено или переопределено. Попытка переопределения (с одинаковым именем переменной) приведет к ошибке. </p>
 	</div>
 	<div class="pair">
 		<p class="question">7. Может ли имя переменной начинаться с цифры, символов <code>_</code> или <code>$</code>?</p>
@@ -59,7 +60,7 @@
 	<div class="pair">
 		<p class="question">11. Что такое "динамическое приведение типов данных"? Можно ли писать JavaScript со статическим приведением типов?
 		</p>
-		<p class="answer">При динамическом приведении в одну и ту же пременную есть возможность записать значения разных типов, тип переменной будет менятся. JavaScript будет возвращать значение для любого выражения.</p>
+		<p class="answer">Нелзя. При динамическом приведении в одну и ту же пременную есть возможность записать значения разных типов, тип переменной будет менятся. JavaScript будет возвращать значение для любого выражения.</p>
 	</div>
 	<div class="pair">
 		<p class="question">12. Как привести строчное значение "10" к числу? Назовите два способа.</p>
@@ -67,13 +68,13 @@
 	</div>
 	<div class="pair">
 		<p class="question">13. Чем отличаются операторы "==" и "==="?</p>
-		<p class="answer">Два символа равенства используется для сравнения, один символ = означает присваивание. Три знака означает строгое равенство, если два операнда строго равны, он возвращает true.</p>
+		<p class="answer">Два символа равенства используется для сравнения, один символ = означает присваивание. Три знака означает строгое равенство. При сравнивании операндов с помощью "==" используеться числовое преобразование, например сравнение ( 0 == false ); даст true, тут false преобразуеться в "0"  При строгом сравнении "===" преобразования типа данных не происходит, сравнивается тип данных. Вышеупомянутый пример даст false.</p>
 	</div>
 	<div class="pair">
 		<p class="question">14. Какие преимущества дают обратные кавычки (`) при указании строки?</p>
 		<p class="answer">Они позволяют создавать шаблонные строки, и это дает ряд преимуществ:<br>
 		в них разрешен перевод строки;<br>
-		можно вставлять выражения с помощью знака ${...}.
+		можно вставлять выражения с помощью интерполяции ${...}.
 		</p>
 	</div>
 
