--- a/app/pages/Final/index.html
+++ b/app/pages/Final/index.html
@@ -11,15 +11,40 @@
 </head>
 <body>
 
-<div class="multiple-items">
-	
-		<div><img src="img/Dog.png" alt=""></div>
-		<div><img src="img/Adult-Dog.png" alt=""></div>
-		<div><img src="img/home-сat.png" alt=""></div>
-		<div><img src="img/Dog.png" alt=""></div>
-		<div><img src="img/Adult-Dog.png" alt=""></div>
-		<div><img src="img/home-сat.png" alt=""></div>
-	
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="img/home-сat.png" alt="catt">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    <div class="item">
+      <img src="img/Dog.png" alt="dogg">
+      <div class="carousel-caption">
+        ...
+      </div>
+    </div>
+    ...
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 
 	<header class="start">
@@ -50,7 +75,7 @@
 		
 			</div>
 				<div class="row start-row">
-					<div class="col-md-6">
+					<div class="col-md-10 col-lg-6">
 						<h1 class="header-title">Not only people need a house</h1>
 						<p class="header-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras gravida 
 						est in porttitor  porttitor. Duis sodales elementum ipsum, vehicula condimentum erat fringilla et.
@@ -95,7 +120,7 @@
 				<div class="col-lg-1">
 					<div class="arrow">
 						<div class="left-arrow">
-							<img src="img/Left-Arrow.png" alt="left-arrow">
+						
 						</div>
 					</div>
 				</div>
@@ -124,7 +149,7 @@
 				<div class="col-lg-1">
 					<div class="arrow">
 						<div class="right-arrow">
-							<img src="img/Right-ArrowHover.png" alt="right-arrow">
+				
 						</div>
 					</div>
 				</div>
