дополнил вторую и третью(четвертую)

--- a/app/pages/answers.html
+++ b/app/pages/answers.html
@@ -143,12 +143,14 @@
 		<p class="answer">Функции можно передать сколько угодно параметров.</p>
 	</div>
 	<div class="pair functions">
-		<p class="question">3. Что случится, если передать в функцию меньше параметров, чем нужно? Объясни на примере функции add(a, b).</p>
+		<p class="question">3. Что случится, если передать в функцию меньше параметров, чем нужно? А если больше? Объясни на примере функции add(a, b).</p>
 		<p class="answer">Им будет присвоено значение undefined. В данном случае оно присвоено параметру b.
-			<code>function add(a, b) {
- 			return (a+b);
-			}
-			console.log ( add('оne')); //оneundefined</code>
+			<code>
+				function add(a, b) {
+ 				return (a+b);
+				}
+				console.log ( add('оne')); //оneundefined
+			</code>
 		</p>
 	</div>
 	<div class="pair functions">
@@ -169,7 +171,8 @@
 	</div>
 	<div class="pair functions">
 		<p class="question">8. Далее указан полный код программы. Что мы увидим в консоли браузера? Почему?</p>
-		<p class="answer">В консоль выведется undefined, так как фунцция не вызванна, и ее параметр не определен. По синтаксису пропущена точка с запятой после закрытия тела цикла.</p>
+		<p class="answer">В консоль выведется undefined, так как фунцция не вызванна, и ее параметр не определен.
+		 (нет точки с запятой после закрытия тела цикла).</p>
 	</div>
   <div class="pair functions">
 		<p class="question">9.</p>
@@ -177,7 +180,7 @@
 		(1) В данном случае осуществлена попытка воспроизвести функцию вне области ее видимости.<br>
 		(2) Переменная, обьявленная как const не может быть переназначена.<br>
 		(3) Error возникает в фунцции first, так как мы пытаемься вызвать вунцию до ее обьявления, а сама ф-я обьявленна методом Function Expression. Вторая функция обьявленна через Function Declaration, при таком методе даной проблемы не будет. <br>
-		(4) Самовызывающаяся функция уже выполнилась. При повторной попытке воспроизведения локальная переменная не видна. Зато если вызовем только глобальную (name), ошибки не будет.
+		(4) Самовызывающаяся функция уже выполнилась. При повторной попытке воспроизведения локальная переменная не видна. Зато если вызовем только глобальную (name), ошибки не будет, она в глабальной области видимости, а не внутри функции.
 		</p>
   </div>
 		<div class="pair objects">
@@ -214,7 +217,7 @@
 		</div>
 		<div class="pair objects">
 			<p class="question">9. Почему при выполнении указанного кода возникают ошибки?</p>
-			<p class="answer">Неправильный синтаксис присвоения метода обьекту, неправильный вызов функции.</p>
+			<p class="answer">Неправильный синтаксис присвоения метода обьекту(добавил ключевое слово this), неправильный вызов функции (добавил имя обїекта при візове метода).</p>
 		</div>
   
   <div class="pair arrays">
