четвертая и пятая, все

--- a/app/pages/answers.html
+++ b/app/pages/answers.html
@@ -185,7 +185,8 @@
   </div>
 		<div class="pair objects">
 			<p class="question">1. Как можно добавить свойства или методы у объекта? Как можно удалить свойство или метод?</p>
-			<p class="answer">Свойства и методы длбавляются к объекту при помощи выражения-обращения (объект.свойство). Для удаления свойств или методов используеться оператор delete (delete объект.свойство).</p>
+			<p class="answer">Свойство - содержимое объекта, которое дает доступ к объекту и записывает в него значение. Метод - исполнительное свойство для обьекта, которое являеться функцией внутри него.
+			Свойства и методы длбавляются к объекту при помощи выражения-обращения (объект.свойство). Для удаления свойств или методов используеться оператор delete (delete объект.свойство).</p>
 		</div>
 		<div class="pair objects">
 			<p class="question">2. Как создать свойство только для чтения?</p>
@@ -216,7 +217,11 @@
 			<p class="answer">Деструктуризация: Вид синтаксиса, с помощю которого сразу нескольким переменным можно присвоить массив или объект с данными.</p>
 		</div>
 		<div class="pair objects">
-			<p class="question">9. Почему при выполнении указанного кода возникают ошибки?</p>
+			<p class="question">9. Объясни особенности каждой из коллекций: Map, Set, WeakMap, WeakSet.</p>
+			<p class="answer">Map хранит данные в виде ключ:значение, в этой коллецции ключем может быть любой тип данных, а не только строки, как в обычных объектах. В качестве ключей в Map может быть объект, перебор осуществляется в том же порядке, что и вставка. Set так же хранит в себе данные в формате ключ:значение, но сохраняет только уникальные значения, удаляя повторы.Данные, помещенные в WeakMap и WeakSet хранятся лишь до тех пор, пока существует основной объект, работают только на запись и чтение, не имеют метода clear,и свойства size.</p>
+		</div>
+		<div class="pair objects">
+			<p class="question">10. Почему при выполнении указанного кода возникают ошибки?</p>
 			<p class="answer">Неправильный синтаксис присвоения метода обьекту(добавил ключевое слово this), неправильный вызов функции (добавил имя обїекта при візове метода).</p>
 		</div>
   
